# pacup-rs

./: .gitignore  Cargo.toml  default.nix  flake.nix  shell.nix
src/: download.rs  lib.rs  main.rs  srcinfo.rs
tests/: tests.rs
tests/data/: megasync-deb.SRCINFO
