[package]
name = "pacup"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
blake2 = "0.10.6"
clap = { version = "4.5.17", features = ["derive"] }
digest = "0.10.7"
hex = "0.4.3"
indicatif = "0.17.8"
itertools = "0.13.0"
md-5 = "0.10.6"
reqwest = "0.12.7"
sha1 = "0.10.6"
sha3 = "0.10.8"
tokio = { version = "1.40.0", features = ["macros"] }
